--- a/status.html
+++ b/status.html
@@ -45,6 +45,47 @@
       .order-status-left,.order-status-right{flex:none;}
       .order-status-right{border-left:none;border-top:2px solid #e5e7eb;padding-left:0;padding-top:16px;}
     }
+    /* ==================== NOTICE SECTION LAYOUT ==================== */
+.notice-section {
+  display: grid;
+  grid-template-columns: 1fr 2fr;  /* Left: 1 part, Right: 2 parts */
+  gap: 24px;
+  margin: 40px 0;
+  align-items: start;
+}
+
+.notice-left {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+/* Policy card expands to fill space */
+.policy-card {
+  min-height: 100%; /* Ensures it stretches */
+}
+
+/* Cards keep original size */
+.notice-card {
+  padding: 20px;
+  border-radius: 12px;
+  background: var(--card);
+  border: 1px solid var(--glass-border);
+  box-shadow: 0 2px 8px rgba(0,0,0,.05);
+}
+
+/* Mobile: Stack everything */
+@media (max-width: 900px) {
+  .notice-section {
+    grid-template-columns: 1fr;
+  }
+  .notice-left {
+    order: 1;
+  }
+  .policy-card {
+    order: 2;
+  }
+}
   </style>
 </head>
 <body>
@@ -73,10 +114,77 @@
 </div>
 
 <!-- (your notice/footer sections stay unchanged) -->
-<section class="notice-section" style="display:flex;gap:20px;align-items:flex-start;">
-  <!-- … your existing notice cards … -->
-</section>
+<!-- ==================== NOTICE SECTION ==================== -->
+<section class="notice-section">
+  <!-- LEFT COLUMN – IMPORTANT + SUPPORT (stacked) -->
+  <div class="notice-left">
+    <!-- Important Notice Card -->
+    <div class="notice-card card">
+      <h3>Important Notice</h3>
+      <p class="muted">
+        Please ensure all order details are entered correctly before confirmation.  
+        Double-check your <b>address</b>, <b>contact number</b>, and <b>product selection</b> to avoid delays.  
+        Orders once confirmed are subject to our Return and Pre-Order Policies.
+      </p>
+    </div>
 
+    <!-- Support Card -->
+    <div class="notice-card card">
+      <h3>Support</h3>
+      <p class="muted">
+        For assistance, please reach us via:<br><br>
+        ▪ Facebook: <a href="https://www.facebook.com/thegeek.shop0/" target="_blank">The Geek Shop</a><br>
+        ▪ Instagram: <a href="https://www.instagram.com/thegeek.shop0/" target="_blank">@thegeekshop</a><br>
+        ▪ WhatsApp: <a href="https://wa.me/01960788862" target="_blank">WhatsApp</a>
+      </p>
+    </div>
+  </div>
+
+  <!-- RIGHT COLUMN – POLICY (expands) -->
+  <div class="notice-card card policy-card">
+    <h2>Shipping & Return Policy</h2>
+    
+    <h3>1. Order Processing & Dispatch</h3>
+    <ul>
+      <li>All confirmed orders placed before <b>6:00 PM</b> are processed and dispatched the <b>same business day</b>.</li>
+      <li>Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</li>
+    </ul>
+
+    <h3>2. Delivery Timeline</h3>
+    <ul>
+      <li>Estimated delivery time is <b>3–7 business days for normal order and 20-40 days for pre order</b>, depending on location and courier efficiency.</li>
+      <li>Customers will be notified with tracking details once the order has been dispatched.</li>
+    </ul>
+
+    <h3>3. Pre-Order Policy</h3>
+    <ul>
+      <li>A <b>25% advance payment</b> is required to confirm any pre-order.</li>
+    </ul>
+    <h4>Important Note</h4>
+    <ul>
+      <li>Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
+      <li>Customers must <b>verify the product upon delivery</b> in the presence of the courier.</li>
+    </ul>
+
+    <h3>4. Return Policy</h3>
+    <h4>4.1 Eligibility Window</h4>
+    <ul>
+      <li>Items can be returned within <b>7 days of purchase</b>.</li>
+      <li>The 7-day period is counted from the <b>date of delivery</b>.</li>
+    </ul>
+    <h4>4.2 Condition of Returned Items</h4>
+    <ul>
+      <li>Products must be in <b>original condition</b>, unused, with all packaging and accessories intact.</li>
+      <li>Items not meeting these conditions may be declined for return.</li>
+    </ul>
+    <h4>4.3 Valid Reasons for Return</h4>
+    <ul>
+      <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made for reasons like “didn’t like the product” or “changed my mind”.</li>
+      <li><b>Defective on Arrival</b> – Products may only be returned if <b>defective or damaged upon delivery</b>.</li>
+      <li><b>Pre-Orders</b> – Confirmed pre-orders <b>cannot be returned</b>, unless defective on arrival.</li>
+    </ul>
+  </div>
+</section>
 <footer style="background:#e8e8ff;padding:20px;text-align:center;height:90px;color:#000;">
   <!-- … your footer … -->
 </footer>
@@ -199,3 +307,4 @@
 </script>
 </body>
 </html>
+
